--- a/m2_layout/app/src/main/res/layout/activity_main.xml
+++ b/m2_layout/app/src/main/res/layout/activity_main.xml
@@ -1,58 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:ignore="UselessParent">
-
-        <FrameLayout
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="16dp"
-            android:background="@android:color/black" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginTop="16dp"
-                android:ellipsize="end"
-                android:lines="1"
-                android:text="@tools:sample/lorem/random" />
-            <!--                android:text="Верхняя строчка" -->
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:ellipsize="end"
-                android:lines="1"
-                android:text="@tools:sample/lorem/random" />
-            <!--                android:text="Нижняя строчка" -->
-        </LinearLayout>
-    </LinearLayout>
-
-    <FrameLayout
+    <com.example.hw2.customView.CustomView
+        android:id="@+id/custom_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="16dp"
-        android:background="@android:color/darker_gray">
-    </FrameLayout>
+        android:layout_height="match_parent" />
 
-
-</LinearLayout>
+</FrameLayout>
