--- a/m4_components/App/app/src/main/res/values/themes.xml
+++ b/m4_components/App/app/src/main/res/values/themes.xml
@@ -1,14 +1,30 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Hw4" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+    <style name="MyTheme.Hw4" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
+        <item name="colorOnPrimary">@color/colorOnPrimary</item>
+        <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="colorSecondaryVariant">@color/colorSecondaryVariant</item>
+        <item name="colorOnSecondary">@color/colorOnSecondary</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="colorSurface">?attr/colorPrimary</item>
     </style>
 
-    <style name="Theme.Hw4" parent="Theme.MaterialComponents.DayNight.DarkActionBar"
+    <style name="MyHeaderStyle" parent="TextAppearance.MaterialComponents.Headline1">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+    </style>
 
+    <style name="MySwitchStyle" parent="Theme.AppCompat.Light">
+        <item name="android:thumbTint">@color/thumb_color_selector</item>
+        <item name="android:trackTint">@color/track_color_selector</item>
+    </style>
 
-
-
-        />
+    <style name="MyCheckBoxStyle" parent="Widget.MaterialComponents.CompoundButton.CheckBox">
+        <item name="colorPrimary">#03DAC5</item>
+        <item name="colorSecondary">#03DAC5</item>
+        <item name="colorOnSurface">#03DAC5</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
