--- a/m8_quiz_animation/quizApp/app/src/main/res/layout/fragment_welcome.xml
+++ b/m8_quiz_animation/quizApp/app/src/main/res/layout/fragment_welcome.xml
@@ -12,7 +12,6 @@
         android:id="@+id/welcome_picture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:contentDescription="@string/welcome_picture_name"
         android:src="@drawable/welcome_picture"
         tools:layout_editor_absoluteX="0dp"
@@ -37,6 +36,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="32dp"
+        android:background="@drawable/custom_ripple_effect"
+        android:clickable="true"
+        android:focusable="true"
+        app:cornerRadius="32dp"
         android:text="@string/button_start"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
