--- a/m8_quiz_animation/quizApp/app/src/main/res/values/themes.xml
+++ b/m8_quiz_animation/quizApp/app/src/main/res/values/themes.xml
@@ -12,6 +12,12 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/purple_</item>
         <!-- Customize your theme here. -->
         <item name="fontFamily">@font/opensans_regular</item>
+
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowEnterTransition">@android:transition/slide_left</item>
+        <item name="android:windowExitTransition">@android:transition/slide_right</item>
+
+
     </style>
 
     <style name="Theme.Know_everything" parent="Base.Theme.Know_everything" />
