--- a/m9_quiz_localization/quizApp/app/src/main/res/values/colors.xml
+++ b/m9_quiz_localization/quizApp/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="grey">#767676</color>
+    <color name="new_purple">#C745DD</color>
     <color name="purple_">#9E13AD</color>
 
 </resources>
