--- a/m17_recyclerview/app/src/main/res/layout/activity_main.xml
+++ b/m17_recyclerview/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".presentation.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".presentation.MainActivity">
 
-<include layout="@layout/content_navigation"/>
+    <include layout="@layout/content_navigation" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
