--- a/m18_permissions/app/src/main/res/layout/item_photo.xml
+++ b/m18_permissions/app/src/main/res/layout/item_photo.xml
@@ -29,13 +29,13 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:alpha="0.2"
+                android:alpha="0.6"
                 android:background="@color/black"
-                android:padding="16dp"
+                android:padding="5dp"
                 app:layout_constraintBottom_toBottomOf="parent">
 
                 <TextView
-                    android:id="@+id/data"
+                    android:id="@+id/date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
