--- a/m19_location/app/src/main/res/layout/fragment_list_photo.xml
+++ b/m19_location/app/src/main/res/layout/fragment_list_photo.xml
@@ -25,4 +25,13 @@
         android:src="@drawable/baseline_add_a_photo_24"
         app:shapeAppearance="?attr/circleRadius" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_go_to_map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="32dp"
+        android:layout_gravity="start|bottom"
+        android:src="@drawable/baseline_assistant_navigation_24"
+        app:shapeAppearance="?attr/circleRadius" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
